--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,35 @@
   "author": "Simon Thore",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.7",
-    "express": "^4.17.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.0.5"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/nodemailer": "^6.4.7",
+    "apollo-server-core": "^3.10.3",
+    "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.11.1",
+    "argon2": "^0.30.2",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^15.3.0",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-dotenv": "^0.9.0",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.18.63"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.9",
+    "concurrently": "^7.5.0",
+    "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
